adjust some name in Week4 and rewrite Week3

--- a/Week-4/Assignmet-3/Templates/Assignment3.html
+++ b/Week-4/Assignmet-3/Templates/Assignment3.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <form method = "POST"  id= "signUp" >
+  <form method = "POST"  id= "sign_up" >
     <p>
       <h1 style = "backGround-color: aliceblue;">Sign Up</h1>
     </p>
@@ -23,7 +23,7 @@
 
 
 
-  <form method = "POST"   id= "signIn">
+  <form method = "POST"   id= "sign_in">
     <p>
       <h1 style = "backGround-color: aliceblue;">Sign In</h1>
     </p>
